--- a/importer/src/importer/maze_bee.py.j2
+++ b/importer/src/importer/maze_bee.py.j2
@@ -3,11 +3,13 @@ from maze import *
 maze = Maze.from_file("{{levelname}}")
 bee = maze.player
 
-"""
+'''
 {{level.config.properties.long_instructions}}
-"""
 
-# {{level.config.properties.short_instructions}}
+
+{{level.config.properties.short_instructions}}
+'''
+
 # When run
 
 
