Changes to create_course to reflect the latest changes to Puzzle
and the refactoring to handle multiple types

--- a/importer/src/importer/maze.py.j2
+++ b/importer/src/importer/maze.py.j2
@@ -1,7 +1,7 @@
 from maze import Puzzle
 
-maze = Puzzle.from_file("{{levelname}}")
-bee = maze.player
+maze = Maze.from_file("{{levelname}}")
+player = maze.player
 
 '''
 https://studio.code.org/s/{{course.key}}/lessons/{{lesson.absolute_position}}/levels/{{level.position}}
