Added type-hint in the template files
This makes code-assist easier for the IDE's

--- a/importer/src/importer/maze.py.j2
+++ b/importer/src/importer/maze.py.j2
@@ -1,6 +1,6 @@
 from maze import Puzzle
 
-maze = Maze.from_file("{{levelname}}")
+maze = Puzzle.from_file("{{levelname}}")
 player = maze.player
 
 '''
