--- a/importer/src/importer/maze_bee.py.j2
+++ b/importer/src/importer/maze_bee.py.j2
@@ -1,7 +1,7 @@
-from maze import Puzzle
+from maze import Puzzle, BeePlayer
 
 maze = Puzzle.from_file("{{levelname}}")
-bee = maze.player
+bee: BeePlayer = maze.player
 
 '''
 https://studio.code.org/s/{{course.key}}/lessons/{{lesson.absolute_position}}/levels/{{level.position}}
