--- a/importer/src/importer/maze_pvz.py.j2
+++ b/importer/src/importer/maze_pvz.py.j2
@@ -1,7 +1,7 @@
-from maze import Puzzle
+from maze import Puzzle, ZombiePlayer
 
 maze = Puzzle.from_file("{{levelname}}")
-zombie = maze.player
+zombie: ZombiePlayer = maze.player
 
 '''
 https://studio.code.org/s/{{course.key}}/lessons/{{lesson.absolute_position}}/levels/{{level.position}}
