--- a/importer/src/importer/maze_harvester.py.j2
+++ b/importer/src/importer/maze_harvester.py.j2
@@ -1,7 +1,7 @@
-from maze import Puzzle, BeePlayer
+from maze import Puzzle, Farmer
 
 maze = Puzzle.from_file("{{levelname}}")
-bee: BeePlayer = maze.player
+farmer: Farmer = maze.player
 
 '''
 https://studio.code.org/s/{{course.key}}/lessons/{{lesson.absolute_position}}/levels/{{level.position}}
